UI: Added editor-field class
(integrated from master branch change 9.2.1-371-g6b92228 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.p.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.p.less
@@ -178,6 +178,11 @@
     }
 }
 
+.statusbar
+{
+    border-top: 1px solid @border-statusbar !important;
+}
+
 statusbar#statusbarviewbox,
 .hud
 {
@@ -198,6 +203,12 @@ statusbar#statusbarviewbox,
     :not(menupopup) > textbox
     {
         color: @foreground !important;
+    }
+    
+    .editor-field
+    {
+        color: @foreground !important;
+        background: @background !important;
     }
 }
 
