--- a/src/chrome/komodo/skin/plat/shared/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/editor.less
@@ -59,6 +59,12 @@
             border: @hud-focused-border;
         }
     }
+    
+    .editor-field
+    {
+        background-color: @hud-selection-background !important;
+        color: @hud-selection-foreground;
+    }
 
     textbox,
     menulist
