--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -1,3 +1,16 @@
+/* Start backwards compatibility - DO NOT USE THESE VARIABLES */
+@icon-url-prefix:               "koicon://ko-svg/chrome/icomoon/skin/";
+@icon-url-toolbar-prefix:       "koicon://ko-svg/chrome/icomoon/skin/";
+@icon-url-widget-prefix:        "koicon://ko-svg/chrome/icomoon/skin/";
+@icon-url-selected-prefix:      "koicon://ko-svg/chrome/icomoon/skin/";
+@icon-url-hud-prefix:           "koicon://ko-svg/chrome/icomoon/skin/";
+@icon-url-suffix:               "?preset=base";
+@icon-url-toolbar-suffix:       "?preset=toolbar";
+@icon-url-widget-suffix:        "?preset=widgets";
+@icon-url-selected-suffix:      "?preset=selected";
+@icon-url-hud-suffix:           "?preset=hud";
+/* Stop backwards compatibility - DO NOT USE THESE VARIABLES */
+
 @icon-suffix:               "?preset=base";
 @icon-toolbar-suffix:       "?preset=toolbar";
 @icon-widget-suffix:        "?preset=widgets";
