Fix backwards compatibility less variables, wrong order doofus
(integrated from master branch change 9.2.1-384-gf06bf13 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -1,14 +1,14 @@
 /* Start backwards compatibility - DO NOT USE THESE VARIABLES */
 @icon-url-prefix:               "koicon://ko-svg/chrome/icomoon/skin/";
-@icon-url-toolbar-prefix:       "koicon://ko-svg/chrome/icomoon/skin/";
-@icon-url-widget-prefix:        "koicon://ko-svg/chrome/icomoon/skin/";
-@icon-url-selected-prefix:      "koicon://ko-svg/chrome/icomoon/skin/";
-@icon-url-hud-prefix:           "koicon://ko-svg/chrome/icomoon/skin/";
+@icon-toolbar-url-prefix:       "koicon://ko-svg/chrome/icomoon/skin/";
+@icon-widget-url-prefix:        "koicon://ko-svg/chrome/icomoon/skin/";
+@icon-selected-url-prefix:      "koicon://ko-svg/chrome/icomoon/skin/";
+@icon-hud-url-prefix:           "koicon://ko-svg/chrome/icomoon/skin/";
 @icon-url-suffix:               "?preset=base";
-@icon-url-toolbar-suffix:       "?preset=toolbar";
-@icon-url-widget-suffix:        "?preset=widgets";
-@icon-url-selected-suffix:      "?preset=selected";
-@icon-url-hud-suffix:           "?preset=hud";
+@icon-toolbar-url-suffix:       "?preset=toolbar";
+@icon-widget-url-suffix:        "?preset=widgets";
+@icon-selected-url-suffix:      "?preset=selected";
+@icon-hud-url-suffix:           "?preset=hud";
 /* Stop backwards compatibility - DO NOT USE THESE VARIABLES */
 
 @icon-suffix:               "?preset=base";
