Skinning: Added the button-unstyled class
(integrated from master branch change 9.2.1-395-g9f5624c by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/editor.less
@@ -85,6 +85,13 @@
     & > button:not(.button-plain)
     {
         -moz-appearance: none !important;
+        border: 0;
+        background: transparent;
+    }
+    
+    :not(button) > button:not(.button-plain):not(.button-unstyled),
+    & > button:not(.button-plain):not(.button-unstyled)
+    {
         background: @hud-dock-color;
         color: @hud-foreground;
         border: 0;
