--- a/src/chrome/komodo/skin/partials/scheme-skinning.p.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.p.less
@@ -160,8 +160,8 @@
         background: @special;
     }
     
-    :not(button) > button:not(.button-plain),
-    & > button:not(.button-plain)
+    :not(button) > button:not(.button-plain):not(.button-unstyled),
+    & > button:not(.button-plain):not(.button-unstyled)
     {
         background: @background-button !important;
         border: 1px solid @border !important;
@@ -172,7 +172,7 @@
         }
     }
 
-    button:not(.button-plain)
+    button:not(.button-plain):not(.button-unstyled)
     {
         color: @foreground !important;
     }
