--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -16,6 +16,7 @@
 @icon-widget-suffix:        "?preset=widgets";
 @icon-selected-suffix:      "?preset=selected";
 @icon-hud-suffix:           "?preset=hud";
+@icon-hud-selected-suffix:  "?preset=hud-selected";
 
 /* Action Icons */
 @icon-undo:                     url("chrome://komodo/skin/images/undo.png");
@@ -459,6 +460,26 @@
 @icon-hud-findpattern-simple:       url("koicon://ko-svg/chrome/icomoon/skin/quotes-right3.svg@{icon-hud-suffix}");
 @icon-hud-findpattern-wildcard:     url("koicon://ko-svg/chrome/icomoon/skin/power.svg@{icon-hud-suffix}");
 @icon-hud-findpattern-regex:        url("koicon://ko-svg/chrome/icomoon/skin/ko_regexp.svg@{icon-hud-suffix}");
+@icon-hud-findpattern-regex-selected: url("koicon://ko-svg/chrome/icomoon/skin/ko_regexp.svg@{icon-hud-selected-suffix}");
+@icon-hud-findpattern-wildcard:     url("koicon://ko-svg/chrome/icomoon/skin/power.svg@{icon-hud-suffix}");
+@icon-hud-find-case:                url("koicon://ko-svg/chrome/icomoon/skin/font-size.svg@{icon-hud-suffix}");
+@icon-hud-find-case-selected:       url("koicon://ko-svg/chrome/icomoon/skin/font-size.svg@{icon-hud-selected-suffix}");
+@icon-hud-find-case-smart:          url("koicon://ko-svg/chrome/icomoon/skin/text-height.svg@{icon-hud-suffix}");
+@icon-hud-find-case-smart-selected: url("koicon://ko-svg/chrome/icomoon/skin/text-height.svg@{icon-hud-selected-suffix}");
+@icon-hud-find-word:                url("koicon://ko-svg/chrome/icomoon/skin/file-word.svg@{icon-hud-suffix}");
+@icon-hud-find-word-selected:       url("koicon://ko-svg/chrome/icomoon/skin/file-word.svg@{icon-hud-selected-suffix}");
+@icon-hud-find-multiline:           url("koicon://ko-svg/chrome/icomoon/skin/paragraph-left3.svg@{icon-hud-suffix}");
+@icon-hud-find-multiline-selected:  url("koicon://ko-svg/chrome/icomoon/skin/paragraph-left3.svg@{icon-hud-selected-suffix}");
+@icon-hud-find-replace:             url("koicon://ko-svg/chrome/icomoon/skin/loop.svg@{icon-hud-suffix}");
+@icon-hud-find-replace-selected:    url("koicon://ko-svg/chrome/icomoon/skin/loop.svg@{icon-hud-selected-suffix}");
+@icon-hud-find-confirm:             url("koicon://ko-svg/chrome/icomoon/skin/warning2.svg@{icon-hud-suffix}");
+@icon-hud-find-confirm-selected:    url("koicon://ko-svg/chrome/icomoon/skin/warning2.svg@{icon-hud-selected-suffix}");
+@icon-hud-find-show:                url("koicon://ko-svg/chrome/icomoon/skin/eye3.svg@{icon-hud-suffix}");
+@icon-hud-find-show-selected:       url("koicon://ko-svg/chrome/icomoon/skin/eye3.svg@{icon-hud-selected-suffix}");
+@icon-hud-find-subdirs:             url("koicon://ko-svg/chrome/icomoon/skin/tree3.svg@{icon-hud-suffix}");
+@icon-hud-find-subdirs-selected:    url("koicon://ko-svg/chrome/icomoon/skin/tree3.svg@{icon-hud-selected-suffix}");
+@icon-hud-find-shortcuts:           url("koicon://ko-svg/chrome/icomoon/skin/arrow-right3.svg@{icon-hud-suffix}");
+@icon-hud-find-open-rx:             url("koicon://ko-svg/chrome/icomoon/skin/new-tab.svg@{icon-hud-suffix}");
 @icon-hud-crumb-arrow:              url("koicon://ko-svg/chrome/icomoon/skin/arrow-right3.svg@{icon-hud-suffix}");
 @icon-hud-help:                     url("koicon://ko-svg/chrome/icomoon/skin/question4.svg@{icon-hud-suffix}");
 @icon-hud-bugs:                     url("koicon://ko-svg/chrome/icomoon/skin/bug.svg@{icon-hud-suffix}");
