Find/Replace: Fix TabulaRasa styling issues
(integrated from master branch change 9.2.1-403-g5a69ba0 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.p.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.p.less
@@ -160,8 +160,8 @@
         background: @special;
     }
     
-    :not(button) > button:not(.button-plain):not(.button-unstyled),
-    & > button:not(.button-plain):not(.button-unstyled)
+    :not(button) > button:not(.button-plain):not(.unstyled),
+    & > button:not(.button-plain):not(.unstyled)
     {
         background: @background-button !important;
         border: 1px solid @border !important;
@@ -172,7 +172,7 @@
         }
     }
 
-    button:not(.button-plain):not(.button-unstyled)
+    button:not(.button-plain):not(.unstyled)
     {
         color: @foreground !important;
     }
