--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -1971,7 +1971,8 @@ ko-pane[type="icons"]
             -moz-appearance: none;
         }
         
-        .checkbox-label-center-box
+        .checkbox-label-center-box,
+        .checkbox-label-box
         {
             visibility: collapse;
         }
