--- a/src/chrome/komodo/skin/plat/shared/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/editor.less
@@ -9,9 +9,13 @@
     background: @hud-background;
     background-image: @hud-background-image;
     color: @hud-foreground;
-    border: @hud-border;
     border-radius: @hud-border-radius;
     box-shadow: @hud-shadow;
+    
+    &:not(.widget):not(.kodialog)
+    {
+        border: @hud-border;
+    }
     
     &.statusbar
     {
@@ -89,8 +93,8 @@
         background: transparent;
     }
     
-    :not(button) > button:not(.button-plain):not(.button-unstyled),
-    & > button:not(.button-plain):not(.button-unstyled)
+    :not(button) > button:not(.button-plain):not(.unstyled),
+    & > button:not(.button-plain):not(.unstyled)
     {
         background: @hud-dock-color;
         color: @hud-foreground;
@@ -147,12 +151,6 @@
 }
 
 /* Findbar */
-
-ko-findbar.hud,
-#find2-window.hud
-{
-    border-width: 1px 0 0 0 !important;
-}
 
 ko-findbar.hud
 {
