Notifications: Most notifications will now show in a smaller pop-in at the bottom right of the screen
rn=

(integrated from master branch change 9.2.1-413-g081fe3e by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/notify/skin/notify.less
+++ b/src/modules/notify/skin/notify.less
@@ -28,11 +28,14 @@
         background-color: rgb(58, 58, 58);
     }
     
-    &.lint
+    &.lint, &.generic
     {
         padding: 4px;
         font-size: 0.9rem;
-        
+    }
+    
+    &.lint
+    {
         button.menu
         {
             visibility: collapse;
