Notifications: Refactor some notifications to use the new interact method
(integrated from master branch change 9.2.1-415-g3499cce by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/modules.less
+++ b/src/chrome/komodo/skin/plat/shared/modules.less
@@ -363,3 +363,28 @@ vbox[anonid="quickstart"]
 {
     visibility: collapse;
 }
+
+/* Statusbar Notifications */
+#statusbar-notifications-wrap label
+{
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 0;
+    padding-right: 4px;
+    font-weight: bold;
+}
+
+#statusbar-notif-info
+{
+    color: rgb(81, 79, 117);
+}
+
+#statusbar-notif-warning
+{
+    color: rgb(107, 94, 56);
+}
+
+#statusbar-notif-error
+{
+    color: rgb(114, 78, 78);
+}
