--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -284,6 +284,19 @@
                 }
             }
             
+            .entry-wrapper
+            {
+                &, .title, .descriptionPrefix, .description
+                {
+                    margin-top: 0;
+                    margin-bottom: 0;
+                    padding-top: 0;
+                    padding-bottom: 0;
+                    line-height: 1rem;
+                    height: 1rem;
+                }
+            }
+            
             &:not(.multiline) .entry-wrapper .descriptionPrefix .description
             {
                 margin: 0 0 0 6px;
