Find: Each search now opens in its own tab, so you can have as many searches open as you like
rn=

(integrated from master branch change 9.2.1-423-ga6d110e by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -2078,3 +2078,10 @@ ko-pane[type="icons"]
     #find-prev-btn { list-style-image: @icon-hud-up; }
     
 }
+
+/* Find Results window */
+
+#findresults-filter-textbox .textbox-search-icon
+{
+    list-style-image: @icon-filter;
+}
