--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -152,6 +152,7 @@
 @icon-customize-panes:          url("koicon://ko-svg/chrome/icomoon/skin/grid3.svg@{icon-suffix}");
 @icon-packages:          url("koicon://ko-svg/chrome/icomoon/skin/box-add.svg@{icon-suffix}");
 @icon-favourite:                url("chrome://famfamfamsilk/skin/icons/star.png");
+@icon-filter:                   url("koicon://ko-svg/chrome/icomoon/skin/filter3.svg@{icon-suffix}");
 
 /* Menu Specific Icons */
 @icon-menu-help:                url("koicon://ko-svg/chrome/icomoon/skin/question2.svg@{icon-suffix}");
