--- a/src/chrome/komodo/skin/plat/shared/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/editor.less
@@ -64,9 +64,14 @@
         }
     }
     
+    .input-field
+    {
+        background-color: @hud-selection-background;
+    }
+    
     .editor-field
     {
-        background-color: @hud-selection-background !important;
+        background-color: @hud-selection-background;
         color: @hud-selection-foreground;
     }
 
