Console: Removed the jsconsole component with something home baked (more robust)
(integrated from master branch change 9.2.1-428-g70cf667 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.p.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.p.less
@@ -127,6 +127,12 @@
         background: @special !important;
         color: @special-fore !important;
     }
+    
+    .selected
+    {
+        color: @foreground-selected !important;
+        background: @background-selected !important;
+    }
 
     richlistitem,
     listitem,
