--- a/src/chrome/komodo/skin/plat/shared/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/editor.less
@@ -41,6 +41,13 @@
         -moz-appearance: none;
         background: transparent !important;
     }
+    
+    .selected
+    {
+        background-color: @hud-selection-background;
+        color: @hud-selection-foreground;
+        border: @hud-selected-border;
+    }
 
     richlistitem,
     listitem,
