--- a/src/modules/notify/skin/notify.less
+++ b/src/modules/notify/skin/notify.less
@@ -7,6 +7,11 @@
     border-radius: 2px;
     border: 1px solid rgba(150,150,150, 0.2);
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
+    
+    &, *
+    {
+        -moz-user-focus: normal;
+    }
 
     &.p-notification
     {
