Console: Minor bug fixes, added history
(integrated from master branch change 9.2.1-432-gb586ec5 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/console/content/less/console.css
+++ b/src/modules/console/content/less/console.css
@@ -124,7 +124,7 @@ li {
   color: #E81D20;
 }
 #output > li.exception:before {
-  content: 'e ';
+  content: 'exc ';
   color: #C42B2B;
 }
 #output > li.exception .message {
