--- a/src/modules/console/content/less/console.less
+++ b/src/modules/console/content/less/console.less
@@ -140,7 +140,7 @@ ul, li
     &.info:before { content: 'nfo '; color: #27A700; }
     &.warning:before { content: 'wrn '; color: #E58E1D; }
     &.error:before { content: 'err '; color: #E81D20; }
-    &.exception:before { content: 'e '; color: #C42B2B; }
+    &.exception:before { content: 'exc '; color: #C42B2B; }
     
     &.exception .message
     {
