--- a/src/modules/console/content/views/console.html
+++ b/src/modules/console/content/views/console.html
@@ -14,8 +14,10 @@
   <ul id="output"></ul>
 </div>
 
-<form class="hud statusbar">
-  <div id="input" contenteditable="true" class="input-field"></div>
+<form class="hud statusbar" id="statusbar">
+    <div id="input-wrapper" class="input-field">
+        <div id="input" contenteditable="true"></div>
+    </div>
 </form>
 
 <script src="../js/auto-complete.js"></script>
