Console: Improve type colors
(integrated from master branch change 9.2.1-434-g457d3c8 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/console/content/less/console.less
+++ b/src/modules/console/content/less/console.less
@@ -199,11 +199,11 @@ ul, li
         .type-string { color: #51A552; }
         .type-number { color: #D6AC39; }
         .type-object { color: #55A8C6; }
-        .type-array { color: #8A38C4; }
+        .type-array { color: #7F20D8; }
         .type-undefined { color: #A0A0A0; }
-        .type-boolean { color: #B542C4; }
+        .type-boolean { color: #CE44C5; }
         .type-element { color: #54C4CE; }
-        .type-function { color: #A5A84B; }
+        .type-function { color: #8E8466; }
         .type-exception { color: #C42B2B; }
     }
     
