UI: Fix find widget styling on windows - fixes #665
(integrated from master branch change 9.2.1-480-gb8ff1a2 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/editor.less
@@ -144,6 +144,8 @@
     dropmarker
     {
         -moz-appearance: none !important;
+        background: transparent;
+        border: 0;
     }
 
 }
