--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -1966,7 +1966,7 @@ ko-pane[type="icons"]
     {
         opacity: 0.8;
         
-        &, .checkbox-spacer-box
+        &, .checkbox-spacer-box, .checkbox-check
         {
             -moz-appearance: none;
         }
