--- a/src/chrome/komodo/skin/plat/shared/modules.less
+++ b/src/chrome/komodo/skin/plat/shared/modules.less
@@ -348,7 +348,7 @@ vbox[anonid="quickstart"]
     {
         padding: 4px 6px;
         
-        image
+        image.button-icon
         {
             max-width: 12px;
             max-height: 12px;
