Skin: Force foreground color for input fields
(integrated from master branch change 9.2.1-523-gfcbf43b by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.p.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.p.less
@@ -215,6 +215,7 @@ statusbar#statusbarviewbox,
     
     .input-field
     {
+        color: @foreground !important;
         background-color: @background-input !important;
     }
     
