--- a/src/chrome/komodo/skin/plat/shared/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/editor.less
@@ -69,6 +69,7 @@
     .input-field
     {
         background-color: @hud-selection-background;
+        color: @hud-selection-foreground;
     }
     
     .editor-field
