Console: Replace contenteditable field with textarea to get around windows issues - fixes #702
(integrated from master branch change 9.2.1-524-gfa49716 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/console/content/views/console.html
+++ b/src/modules/console/content/views/console.html
@@ -16,7 +16,9 @@
 
 <form class="hud statusbar" id="statusbar">
     <div id="input-wrapper" class="input-field">
-        <div id="input" contenteditable="true"></div>
+        <textarea id="input" wrap="off"></textarea>
+<span id="input-mock">a
+a</span> <!-- Used to measure char width/height, do not alter contents -->
     </div>
 </form>
 
