--- a/src/modules/console/content/less/console.less
+++ b/src/modules/console/content/less/console.less
@@ -244,22 +244,43 @@ ul, li
         }
     }
     
+    #input, #input-mock
+    {
+        line-height: 1.5rem;
+        font-size: 1rem;
+        white-space: pre;
+        font-family: monospace;
+        
+        * { /* yay xbl bindings */
+            white-space: pre;
+        }
+    }
+    
     #input
     {
         min-width: 300px;
         width: 50vw;
-        line-height: 1.5rem;
         max-height: 6rem;
         overflow: auto;
-        min-height: 1.5rem;
-        font-size: 1rem;
+        height: 1.5rem;
         background: transparent;
-        margin-bottom: -4px;
+        border: 0;
+        margin: 0;
+        border: 0;
+        color: inherit;
+        resize: none;
+        vertical-align: middle;
         
         &:focus
         {
             outline: 0;
         }
+    }
+    
+    #input-mock
+    {
+        visibility: hidden;
+        position: absolute;
     }
 }
 
