Debugger: Clean up debugger widget (keep the UI consistent)
(integrated from master branch change 9.2.1-541-gae50674 by Nathan
Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -104,7 +104,7 @@
 @icon-boldtext-disabled:        url("chrome://komodo/skin/images/boldButton_disable.png");
 @icon-italictext:               url("chrome://komodo/skin/images/italicButton.png");
 @icon-italictext-disabled:      url("chrome://komodo/skin/images/italicButton_disable.png");
-@icon-clear-text:               url("chrome://fugue/skin/icons/application-run.png");
+@icon-clear-text:               url("koicon://ko-svg/chrome/icomoon/skin/clear-formatting.svg@{icon-suffix}");
 @icon-bulletlist:               url("koicon://ko-svg/chrome/fontawesome/skin/list.svg@{icon-suffix}");
 @icon-bulletlist-disabled:      url("koicon://ko-svg/chrome/fontawesome/skin/list.svg@{icon-suffix}");
 
@@ -127,11 +127,11 @@
 @icon-scroll-arrow-left-hover:  url("chrome://komodo/skin/images/scrollArrowLeft_hover.png");
 @icon-scroll-arrow-left-disabled: url("chrome://komodo/skin/images/scrollArrowLeft_disable.png");
 @icon-gear:                     url("koicon://ko-svg/chrome/fontawesome/skin/cog.svg@{icon-suffix}");
-@icon-list-item-down:           url("koicon://ko-svg/chrome/icomoon/skin/arrow-down4.svg@{icon-suffix}");
-@icon-list-item-up:             url("koicon://ko-svg/chrome/icomoon/skin/arrow-up4.svg@{icon-suffix}");
-@icon-list-item-add:            url("koicon://ko-svg/chrome/icomoon/skin/plus.svg@{icon-suffix}");
-@icon-list-item-edit:           url("koicon://ko-svg/chrome/icomoon/skin/pencil6.svg@{icon-suffix}");
-@icon-list-item-remove:         url("koicon://ko-svg/chrome/icomoon/skin/close2.svg@{icon-suffix}");
+@icon-list-item-down:           url("koicon://ko-svg/chrome/fontawesome/skin/caret-down.svg@{icon-suffix}");
+@icon-list-item-up:             url("koicon://ko-svg/chrome/fontawesome/skin/caret-up.svg@{icon-suffix}");
+@icon-list-item-add:            url("koicon://ko-svg/chrome/fontawesome/skin/plus.svg@{icon-suffix}");
+@icon-list-item-edit:           url("koicon://ko-svg/chrome/fontawesome/skin/pencil.svg@{icon-suffix}");
+@icon-list-item-remove:         url("koicon://ko-svg/chrome/fontawesome/skin/close.svg@{icon-suffix}");
 @icon-button-moreinfo-open:     url("chrome://komodo/skin/images/less.gif");
 @icon-button-moreinfo:          url("chrome://komodo/skin/images/more.gif");
 @icon-stopsign-small:           url("chrome://komodo/skin/images/find_stop.png");
@@ -299,7 +299,7 @@
 @icon-debug-tab-stopped:        url("koicon://ko-svg/chrome/icomoon/skin/stop2.svg@{icon-suffix}");
 @icon-debug-tab-interactive:    url("koicon://ko-svg/chrome/icomoon/skin/last.svg@{icon-suffix}");
 
-@icon-debug-below-show-hidden:  url("koicon://ko-svg/chrome/icomoon/skin/eye3.svg@{icon-suffix}");
+@icon-debug-below-show-hidden:  url("koicon://ko-svg/chrome/fontawesome/skin/eye.svg@{icon-suffix}");
 
 /* Unit Test Icons */
 
