--- a/src/chrome/komodo/skin/plat/shared/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/editor.less
@@ -14,9 +14,7 @@
     
     &.statusbar
     {
-        border-left: 0 !important;
-        border-bottom: 0 !important;
-        border-right: 0 !important;
+        border: 0 !important;
         border-radius: 0 !important;
     }
 
