UI: Autorepeatbutton doesn't need a border - fixes #712
(integrated from master branch change 9.2.1-545-gfe8fdf3 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -187,6 +187,11 @@ button:-moz-any(.button-toolbar-a, .button-toolbar-b, .button-toolbar-c, .button
     }
 }
 
+autorepeatbutton
+{
+    border: 0;
+}
+
 /* Button States */
 button:not([disabled="true"]):not(.button-link):not([type="menu"]),
 :not(toolbarbutton):not(toolbaritem) > toolbarbutton:not([disabled="true"])
