--- a/src/modules/notify/skin/notify.less
+++ b/src/modules/notify/skin/notify.less
@@ -1,6 +1,7 @@
 .notify-panel
 {
     -moz-appearance: none !important;
+    -moz-binding: url("chrome://global/content/bindings/popup.xml#panel") !important;
     padding: 6px;
     color: #EEE;
     background: rgb(34, 34, 34);
