UI: Skin scrollcorners too
(integrated from master branch change 9.2.1-556-gf711bbf by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.p.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.p.less
@@ -232,7 +232,7 @@ scintilla[virtualScrollbars="true"] row > scrollbar,
     border: 0;
     background: transparent;
     -moz-appearance: none !important;
-
+    
     slider
     {
         -moz-appearance: none !important;
@@ -293,6 +293,12 @@ scintilla[virtualScrollbars="true"] row > scrollbar,
 .hud scrollbar
 {
     .skinnedScrollbars();
+}
+
+.hud scrollcorner
+{
+    background: transparent;
+    -moz-appearance: none !important;
 }
 /* #endif */
 
