Console: Make input take 100% of the width
(integrated from master branch change 9.2.1-557-g6c28a0d by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/console/content/less/console.less
+++ b/src/modules/console/content/less/console.less
@@ -224,6 +224,7 @@ ul, li
     
     #input-wrapper
     {
+        width: 100vw;
         padding-left: 1rem;
         margin: 4px;
         
@@ -258,8 +259,7 @@ ul, li
     
     #input
     {
-        min-width: 300px;
-        width: 50vw;
+        width: ~"calc(100vw - 25px)";
         max-height: 6rem;
         overflow: auto;
         height: 1.5rem;
